Removed the binary file from the repository, added .env.example file

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ testdata/
  *.dockerignore
  *.compose
 
+ # Игнорируем скомпилированные бинарные файлы
+go_final_project
 
-# Логи работы сервера
-*.log
+# Игнорируем базу данных
+scheduler.db
