Part 1 of step 8 completed

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ vendor/
 .env
 .env.*
 
+# Исключаем .env.example, чтобы он был в репозитории
+!.env.example
+
 # Настройки операционной системы
 .DS_Store
 
@@ -37,12 +40,15 @@ testdata/
 *.o
 *.a
 
-# Файлы деплоя и CI/CD, если они не должны быть в репозитории
+# Файлы деплоя и CI/CD
  *.dockerignore
  *.compose
 
- # Игнорируем скомпилированные бинарные файлы
+# Бинарный файл приложения
 go_final_project
 
-# Игнорируем базу данных
+# База данных
 scheduler.db
+
+# Сессионные файлы
+cookies.txt
