--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: Go CI
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - new-feature
   pull_request:
-    branches: [ main ]
+    branches: 
+      - main
+      - new-feature
 
 jobs:
   build:
