Add schema setup for CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,10 @@ jobs:
     - name: Install dependencies
       run: go mod download
 
+    - name: Set up database schema
+      run: |
+        sqlite3 scheduler.db < schema.sql
+
     - name: Build
       run: go build -v ./cmd/main.go
 
