--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +24,30 @@ jobs:
       with:
         go-version: 1.22
 
+    - name: Cache Go modules
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
     - name: Install dependencies
       run: go mod download
 
     - name: Build
       run: go build -v ./...
+
+    - name: Set up database schema
+      run: |
+        sqlite3 scheduler.db < schema.sql
+
+    - name: Start server
+      run: |
+        nohup go run ./cmd/main.go &
+        sleep 5 
 
     - name: Run tests
       run: go test -v ./...
