--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      TODO_PORT: 7540
+      TODO_DBFILE: scheduler.db
+      TODO_PASSWORD: ${{ secrets.TODO_PASSWORD }}  # Заменил на секрет для безопасности
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -22,10 +27,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.22
+        go-version: '1.22'
 
     - name: Cache Go modules
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.cache/go-build
@@ -37,31 +42,34 @@ jobs:
     - name: Install dependencies
       run: go mod download
 
-    - name: Build
-      run: go build -v ./...
-
     - name: Set up database schema
       run: |
-        sqlite3 scheduler.db < schema.sql
+        sqlite3 ${{ env.TODO_DBFILE }} < schema.sql
 
-    - name: Start server
+    - name: Build the application
+      run: go build -v -o app ./cmd/main.go
+
+    - name: Start the application
       run: |
-        nohup go run ./cmd/main.go &
+        nohup ./app &
         sleep 5 
 
     - name: Run tests
       run: go test -v ./...
 
-    - name: Lint
+    - name: Lint code
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.52.2
 
-    - name: Build Docker image
-      run: docker build -t vladimirvereschagin/go_final_project:latest .
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Push Docker image to DockerHub
-      if: github.ref == 'refs/heads/main'
+    - name: Build and push Docker image
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/new-feature'
       run: |
-        echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        docker push vladimirvereschagin/go_final_project:latest
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/go_final_project:latest .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/go_final_project:latest
