--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     env:
       TODO_PORT: 7540
       TODO_DBFILE: scheduler.db
-      TODO_PASSWORD: ${{ secrets.TODO_PASSWORD }}  # Заменил на секрет для безопасности
+      TODO_PASSWORD: ${{ secrets.TODO_PASSWORD }}  # Используем секрет для безопасности
 
     steps:
     - name: Checkout code
@@ -42,9 +42,14 @@ jobs:
     - name: Install dependencies
       run: go mod download
 
+    - name: Install SQLite3
+      run: sudo apt-get update && sudo apt-get install -y sqlite3
+
     - name: Set up database schema
       run: |
         sqlite3 ${{ env.TODO_DBFILE }} < schema.sql
+      env:
+        TODO_DBFILE: scheduler.db
 
     - name: Build the application
       run: go build -v -o app ./cmd/main.go
@@ -55,7 +60,11 @@ jobs:
         sleep 5 
 
     - name: Run tests
-      run: go test -v ./...
+      run: |
+        sqlite3 ${{ env.TODO_DBFILE }} < schema.sql  # Убедимся, что таблица существует перед тестами
+        go test -v ./...
+      env:
+        TODO_DBFILE: scheduler.db
 
     - name: Lint code
       uses: golangci/golangci-lint-action@v3
