--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      TODO_PORT: 7540
-      TODO_DBFILE: ${{ github.workspace }}/scheduler.db
-      TODO_PASSWORD: ${{ secrets.TODO_PASSWORD }}
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -30,7 +25,7 @@ jobs:
         go-version: '1.22'
 
     - name: Cache Go modules
-      uses: actions/cache@v4
+      uses: actions/cache@v3
       with:
         path: |
           ~/.cache/go-build
@@ -47,21 +42,26 @@ jobs:
 
     - name: Set up database schema
       run: |
-        sqlite3 "${{ env.TODO_DBFILE }}" < schema.sql
+        sqlite3 "${{ github.workspace }}/scheduler.db" < schema.sql
 
     - name: Build the application
       run: go build -v -o app ./cmd
 
     - name: Start the application
+      env:
+        TODO_PORT: 7540
+        TODO_DBFILE: ${{ github.workspace }}/scheduler.db
+        TODO_PASSWORD: ${{ secrets.TODO_PASSWORD }}
       run: |
         nohup ./app &
         sleep 5
 
     - name: Run tests
+      env:
+        TODO_DBFILE: ${{ github.workspace }}/scheduler.db
+        TODO_PASSWORD: ${{ secrets.TODO_PASSWORD }}
       run: |
         go test -v ./...
-      env:
-        TODO_DBFILE: ${{ env.TODO_DBFILE }}
 
     - name: Lint code
       uses: golangci/golangci-lint-action@v3
