--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Install dependencies
       run: go mod download
 
+    - name: Update Go dependencies
+      run: go get -u ./...
+
     - name: Install SQLite3
       run: sudo apt-get update && sudo apt-get install -y sqlite3 libsqlite3-dev
 
@@ -59,7 +62,7 @@ jobs:
     - name: Run tests
       env:
         TODO_DBFILE: ${{ github.workspace }}/scheduler.db
-        TODO_PASSWORD: ""  # Оставляем пустым для тестов без пароля
+        TODO_PASSWORD: ""
       run: |
         go test -v ./...
 
