--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,18 @@ jobs:
       with:
         go-version: '1.22'
 
+    - name: Clean cache directories before restoring
+      run: |
+        rm -rf ~/.cache/go-build
+        rm -rf ~/go/pkg/mod
+
     - name: Cache Go modules
       uses: actions/cache@v3
       with:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-go-
 
