--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,19 @@ jobs:
       run: |
         go test -v ./...
 
+    - name: Clean Go Module Cache before Linting
+      run: |
+        go clean -modcache
+
+    - name: GolangCI-Lint Cache Cleanup
+      run: |
+        rm -rf ~/.cache/golangci-lint
+
     - name: Lint code
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.52.2
+        skip-cache: true
 
     - name: Log in to DockerHub
       uses: docker/login-action@v2
