--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      GOPATH: ${{ github.workspace }}/go
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -24,19 +27,14 @@ jobs:
       with:
         go-version: '1.22'
 
-    - name: Clean cache directories before restoring
-      run: |
-        rm -rf ~/.cache/go-build
-        rm -rf ~/go/pkg/mod
-
     - name: Cache Go modules
       uses: actions/cache@v3
       env:
         TAR_OPTIONS: --overwrite
       with:
         path: |
+          ${{ env.GOPATH }}
           ~/.cache/go-build
-          ~/go/pkg/mod
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
@@ -70,19 +68,10 @@ jobs:
       run: |
         go test -v ./...
 
-    - name: Clean Go Module Cache before Linting
-      run: |
-        go clean -modcache
-
-    - name: GolangCI-Lint Cache Cleanup
-      run: |
-        rm -rf ~/.cache/golangci-lint
-
     - name: Lint code
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.52.2
-        skip-cache: true
 
     - name: Log in to DockerHub
       uses: docker/login-action@v2
