--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      GOPATH: ${{ github.workspace }}/go
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -29,12 +26,10 @@ jobs:
 
     - name: Cache Go modules
       uses: actions/cache@v3
-      env:
-        TAR_OPTIONS: --overwrite
       with:
         path: |
-          ${{ env.GOPATH }}
           ~/.cache/go-build
+          ~/go/pkg/mod
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
@@ -71,9 +66,13 @@ jobs:
     - name: Lint code
       uses: golangci/golangci-lint-action@v3
       with:
-        version: v1.52.2
+        version: latest
+      env:
+        GO111MODULE: 'on'
+        GOPROXY: 'https://proxy.golang.org,direct'
 
     - name: Log in to DockerHub
+      if: github.ref_name == 'main' || github.ref_name == 'new-feature'
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
