--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
+        skip-cache: true  # Отключаем кэширование
       env:
         GO111MODULE: 'on'
         GOPROXY: 'https://proxy.golang.org,direct'
