--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,16 +23,7 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-
-    - name: Cache Go modules
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cache/go-build
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+        cache: 'modules'
 
     - name: Install dependencies
       run: go mod download
@@ -67,7 +58,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
-        skip-cache: true  # Отключаем кэширование
+        skip-cache: true
       env:
         GO111MODULE: 'on'
         GOPROXY: 'https://proxy.golang.org,direct'
