--- a/.dockerignore
+++ b/.dockerignore
@@ -22,7 +22,7 @@ build/
 tmp/
 *.out
 
-# Игнорируем модули и директории зависимостей Go (они будут собираться заново)
+# Игнорируем модули и директории зависимостей Go
 vendor/
 .gopath/
 
@@ -36,8 +36,9 @@ vendor/
 coverage.out
 testdata/
 
-# Игнорируем базу данных (если создаётся локально)
+# Игнорируем базу данных
 scheduler.db
 
-# Сессионные файлы
+# Временные файлы
 cookies.txt
+nohup.out
