--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,13 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-        cache: true  # Изменено на логическое значение
+        cache: true
 
     - name: Install dependencies
       run: go mod download
@@ -58,7 +58,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
-        skip-cache: true  # Отключаем кэширование
+        skip-cache: true
       env:
         GO111MODULE: 'on'
         GOPROXY: 'https://proxy.golang.org,direct'
@@ -70,8 +70,19 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+    - name: Set up QEMU
+      if: github.ref_name == 'main' || github.ref_name == 'new-feature'
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      if: github.ref_name == 'main' || github.ref_name == 'new-feature'
+      uses: docker/setup-buildx-action@v2
+
     - name: Build and push Docker image
       if: github.ref_name == 'main' || github.ref_name == 'new-feature'
-      run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/go_final_project:latest .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/go_final_project:latest
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        platforms: linux/amd64,linux/arm64
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/go_final_project:latest
