--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository_owner }}/scheduler:latest .
+        run: docker build -t ghcr.io/vladimirvereshchagin/scheduler:latest .
 
       - name: Push Docker image to GitHub Packages
-        run: docker push ghcr.io/${{ github.repository_owner }}/scheduler:latest
+        run: docker push ghcr.io/vladimirvereshchagin/scheduler:latest
