--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Publish Docker Image
+name: Publish Multi-Architecture Docker Image
 
 on:
   push:
@@ -13,11 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to GitHub Container Registry
         run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Build Docker image
-        run: docker build -t ghcr.io/vladimirvereshchagin/scheduler:latest .
-
-      - name: Push Docker image to GitHub Packages
-        run: docker push ghcr.io/vladimirvereshchagin/scheduler:latest
+      - name: Build and push Docker image
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -t ghcr.io/vladimirvereshchagin/scheduler:latest \
+            --push .
